# lido-satellite

./: .env  .gitignore  .solhint.json  Cargo.toml  Makefile  NOTICE  README.md  hardhat.config.js  integration_test.bash  package-lock.json  package.json
.github/workflows/: tests.yml
contracts/cosmwasm/lido-satellite/: Cargo.toml
contracts/cosmwasm/lido-satellite/.cargo/: config
contracts/cosmwasm/lido-satellite/src/: execute.rs  lib.rs  query.rs  state.rs
contracts/cosmwasm/lido-satellite/src/tests/: helpers.rs  mod.rs
contracts/cosmwasm/lido-satellite/src/tests/execute/: burn.rs  mint.rs
contracts/cosmwasm/lido-satellite/src/tests/query/: config.rs
contracts/cosmwasm/mock-astroport-router/: Cargo.toml
contracts/cosmwasm/mock-astroport-router/.cargo/: config
contracts/cosmwasm/mock-astroport-router/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  state.rs
contracts/cosmwasm/wrap-and-send/: Cargo.toml
contracts/cosmwasm/wrap-and-send-sentinel/: Cargo.toml
contracts/cosmwasm/wrap-and-send-sentinel/.cargo/: config
contracts/cosmwasm/wrap-and-send-sentinel/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  reply.rs  state.rs
contracts/cosmwasm/wrap-and-send/.cargo/: config
contracts/cosmwasm/wrap-and-send/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  reply.rs  state.rs  sudo.rs
contracts/cosmwasm/wrap-and-send/src/tests/: helpers.rs  instantiate.rs  mod.rs
contracts/cosmwasm/wrap-and-send/src/tests/execute/: mod.rs  swap_callback.rs  wrap_and_send.rs  wrap_callback.rs
contracts/cosmwasm/wrap-and-send/src/tests/query/: config.rs
contracts/cosmwasm/wrap-and-send/src/tests/reply/: astroport_swap.rs  ibc_transfer.rs  lido_satellite_wrap.rs  mod.rs  wrap_callback.rs
contracts/cosmwasm/wrap-and-send/src/tests/sudo/: error.rs  mod.rs  response.rs  timeout.rs
contracts/lido-satellite/: Cargo.toml
contracts/lido-satellite/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/lido-satellite/src/examples/: deploy.rs
contracts/lido-satellite/src/tests/: helpers.rs  instantiate.rs  integration_tests.rs  mod.rs
contracts/lido-satellite/src/tests/execute/: burn.rs  mint.rs  mod.rs
contracts/lido-satellite/src/tests/query/: config.rs
contracts/solidity/gmp-helper/: TODO.md  gmp-helper.sol  ossifiable-proxy.sol  sign_demo.html
contracts/solidity/gmp-helper/mock/: axelar-gas-service.sol  axelar-gateway.sol  wsteth.sol
scripts/: build_release.sh  deploy_gmp_helper.js  deploy_ossifiable_proxy.js
src/: contract.rs  error.rs  execute.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs
src/examples/: deploy.rs
src/tests/: helpers.rs  instantiate.rs
src/tests/execute/: burn.rs  mint.rs  mod.rs  update_config.rs
src/tests/query/: config.rs
test/: GmpHelper.js
