[workspace]
members = [ "contracts/cosmwasm/*" ]

[workspace.package]
authors = ["Murad Karammaev <muradkarammaev@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
version = "0.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cw-storage-plus = "1.1.0"
neutron-sdk = "0.6.1"
cw2 = "1.1.0"
thiserror = "1.0.48"
