[workspace]
members = [ "contracts/cosmwasm/*" ]
resolver = "2"

[workspace.package]
authors = ["Murad Karammaev <muradkarammaev@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
version = "0.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
neutron-sdk = "0.10.0"
cw2 = "1.1.2"
thiserror = "1.0.50"
