[package]
name = "lido-satellite"
version = "0.1.0"
description = "counter constract"
keywords = ["cosmwasm", "blockchain"]
edition = { workspace = true }
exclude = [".env"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
interface = ["dep:cw-orch"]
library = []

[dependencies]
cosmwasm-schema = "1.2.6"
cosmwasm-std = "1.2.6"
cw-storage-plus = "1.0.1"
neutron-sdk = "0.5.0"
cw2 = "1.0.1"
thiserror = "1.0.40"
cw-orch = { version = "0.13.0", optional = true }

[dev-dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
cw-orch = { version = "0.13.0", features = ["daemon"] }

[[example]]
name = "deploy"
path = "src/examples/deploy.rs"
required-features = ["interface"]
