[package]
name = "lido-satellite"
version = "0.1.0"
description = "Lido satellite"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cw-storage-plus = "1.1.0"
neutron-sdk = "0.6.1"
cw2 = "1.1.0"
thiserror = "1.0.48"
