[package]
name = "lido-satellite"
version = "0.1.0"
description = "Lido satellite"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
neutron-sdk = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
