[package]
name = "wrap-and-send-sentinel"
version = "0.1.0"
description = "Sentinel for Wrap and Send contract, it wraps a call for it and refunds funds if Wrap and Send fails"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
lido-satellite = { path = "../lido-satellite", features = ["library"] }
wrap-and-send = { path = "../wrap-and-send", features = ["library"] }
